[package]
name = "nex-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust port (work-in-progress) of the nex-go networking library (HPP/PRUDP/etc)."

[lib]
name = "nex"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
byteorder = "1"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
crc32fast = "1"
async-trait = "0.1"
bitflags = "1.3"
md-5 = "0.10"
hex = "0.4"
hmac = "0.12"

# Compression (optional)
flate2 = { version = "1", optional = true }

[features]
default = []
# Enable zlib support by turning on the optional flate2 dependency.
zlib = ["dep:flate2"]
# Placeholder for a future LZO implementation.
lzo = []
